[package]
name = "binja-msp430"
version = "0.1.0"
authors = ["jrozner"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
binaryninja = { path = "../binaryninja-api/rust" }#git = "https://github.com/Vector35/binaryninja-api.git", branch = "dev" }
log = "0.4.14"
msp430-asm = { path = "../msp430-asm" }
